crates/mir/filetests/tests/valid_programs/function_calls.mir
// @harness parser_roundtrip
// @harness typecheck_validation_succeeds
// @harness value_initialization_validation_succeeds
// @harness cfg_integrity_validation_succeeds
// @harness ssa_validation_succeeds
(mir
    (func caller
        (return_type int)
        (entry block0)
        (block block0
            (param a int)
            (param b int)
            (call v0 (callee (a)))
            (int.add v1 (v0 v0))
            (copy v2 (v1))
            (return (v2))))
    (func callee
        (return_type int)
        (entry block0)
        (block block0
            (param x int)
            (constant v0 (2))
            (int.mul v1 (x v0))
            (return (v1)))))