crates/mir/filetests/tests/invalid_programs/unsatisfied_trait_bound_trait_dispatch.mir
// @harness typecheck_validation_fails
(mir
    (trait One
        (assoc_func one
            (return_type Self)))
    (trait_impl
        (trait One)
        (type int)
        (assoc_func one int_one))
    (func int_one
        (return_type int)
        (entry block0)
        (block block0
            (constant x (1))
            (return (x))))
    (func main
        (return_type real)
        (entry block0)
        (block block0
            (call x ((assoc_func real One one) ()))
            (return (x)))))